--- a/popup.html
+++ b/popup.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Blah</title>
+    <script src="resources/react.js"></script>
+    <script src="resources/react-dom.js"></script>
+    <script src="resources/browser.min.js"></script>
 </head>
 <body>
-    <div>Hello World</div>
-
+    <div id="content"></div>
+    <script type="text/babel" src="popup.jsx"></script>
 </body>
 </html>
