--- a/popup.html
+++ b/popup.html
@@ -3,12 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Blah</title>
-    <script src="resources/react.js"></script>
-    <script src="resources/react-dom.js"></script>
-    <script src="resources/browser.min.js"></script>
 </head>
 <body>
     <div id="content"></div>
-    <script type="text/babel" src="popup.jsx"></script>
+    <script src="dist/bundle.js"></script>
 </body>
 </html>
